Update setting (Java 21)